--- a/res/themes/tchap-common/css/_tchap_custom.pcss
+++ b/res/themes/tchap-common/css/_tchap_custom.pcss
@@ -101,3 +101,8 @@
 .mx_AnalyticsLearnMoreDialog .mx_AnalyticsLearnMore_image_holder {
     background-image: url("$(res)/themes/tchap/img/logos/tchap-logo.svg");
 }
+
+/* DSFR Button no border radius */
+.mx_AccessibleButton.mx_AccessibleButton_hasKind {
+    border-radius: 0px;
+}
